--- a/spark8t/resources/templates/role_yaml.tmpl
+++ b/spark8t/resources/templates/role_yaml.tmpl
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    app.kubernetes.io/managed-by: spark-client
+    app.kubernetes.io/managed-by: spark8t
   name: {{resourcename}}
   namespace: {{namespace}}
 rules:
