--- a/spark8t/resources/templates/serviceaccount_yaml.tmpl
+++ b/spark8t/resources/templates/serviceaccount_yaml.tmpl
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/managed-by: spark-client
+    app.kubernetes.io/managed-by: spark8t
   name: {{resourcename}}
   namespace: {{namespace}}
