[DPE-3725] Limit secret access and add support for Configuration Hub secret (#77)

--- a/spark8t/resources/templates/role_yaml.tmpl
+++ b/spark8t/resources/templates/role_yaml.tmpl
@@ -13,10 +13,30 @@ rules:
   - configmaps
   - services
   - serviceaccounts
-  - secrets
   verbs:
   - create
   - get
   - list
   - watch
   - delete
+  - deletecollection
+  - update
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  resourceNames:
+  - spark8t-sa-conf-{{username}}
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  resourceNames:
+  - configuration-hub-conf-{{username}}
+  verbs:
+  - get
