--- a/spark8t/resources/templates/role_yaml.tmpl
+++ b/spark8t/resources/templates/role_yaml.tmpl
@@ -37,6 +37,6 @@ rules:
   resources:
   - secrets
   resourceNames:
-  - configuration-hub-conf-{{username}}
+  - integrator-hub-conf-{{username}}
   verbs:
   - get
