Address PR comments and rename integration-hub commands

--- a/spark8t/resources/templates/role_yaml.tmpl
+++ b/spark8t/resources/templates/role_yaml.tmpl
@@ -37,6 +37,6 @@ rules:
   resources:
   - secrets
   resourceNames:
-  - integrator-hub-conf-{{username}}
+  - integration-hub-conf-{{username}}
   verbs:
   - get
