Add resource manifest of the created resources.

--- a/spark8t/resources/templates/serviceaccount_yaml.tmpl
+++ b/spark8t/resources/templates/serviceaccount_yaml.tmpl
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  labels:
-    app.kubernetes.io/managed-by: spark8t
   name: {{resourcename}}
   namespace: {{namespace}}
+  labels:
+    app.kubernetes.io/generated-by: spark8t
