--- a/spark8t/resources/templates/rolebinding_yaml.tmpl
+++ b/spark8t/resources/templates/rolebinding_yaml.tmpl
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    app.kubernetes.io/managed-by: spark8t
+    app.kubernetes.io/generated-by: spark8t
   name: {{resourcename}}
   namespace: {{namespace}}
 roleRef:
